--- a/www/templates/tab-catalog.html
+++ b/www/templates/tab-catalog.html
@@ -69,5 +69,21 @@
         
       </div>
     </div>
+
+    <div class="list">
+      <div class="item item-divider">
+        Still need help?
+      </div>
+      <div class="support-items">
+          <a class="item item-icon-right" href="mailto:inverterinfo@hal.hitachi.com" target="_blank">
+              <i class="icon ion-ios-email-outline"></i>
+              Email: inverterinfo@hal.hitachi.com
+          </a>
+          <a class="item item-icon-right" href="tel:+1-980-500-7141" target="_blank">
+              <i class="icon ion-ios-telephone-outline"></i>
+              Phone: +1-980-500-7141
+          </a>
+      </div>
+  </div>
   </ion-content> 
 </ion-view>
