--- a/www/templates/filter-results.html
+++ b/www/templates/filter-results.html
@@ -30,7 +30,11 @@
 					</tr>
 					<tr>
 						<td class="inverter-spec-name">Amps</td>
-						<td class="inverter-specs">{{product.amp}}</td>
+						<td class="inverter-specs">{{product.amp}} CT</td>
+					</tr>
+					<tr>
+						<td class="inverter-spec-name"></td>
+						<td class="inverter-specs">{{product.ampVt}} {{product.ampVt != null ? 'VT' : ''}}</td>
 					</tr>
 				</table>
 			</div>
@@ -50,6 +54,22 @@
 				</div>
 			</div>
 		</ion-list>
+
+		<div class="list">
+			<div class="item item-divider">
+			  Still need help?
+			</div>
+			<div class="support-items">
+				<a class="item item-icon-right" href="mailto:inverterinfo@hal.hitachi.com" target="_blank">
+					<i class="icon ion-ios-email-outline"></i>
+					Email: inverterinfo@hal.hitachi.com
+				</a>
+				<a class="item item-icon-right" href="tel:+1-980-500-7141" target="_blank">
+					<i class="icon ion-ios-telephone-outline"></i>
+					Phone: +1-980-500-7141
+				</a>
+			</div>
+		</div>
 	</ion-content>
 </ion-nav-view>
 <!--
